   * Added trigger and delayed start information to service list
   * Added file information to service list tooltips
   * Balloon tips for process/service notifications are now clickable
   * Added handle names for unnamed File objects
   * Added warning for users who attempt to start the 32-bit version on 64-bit Windows
   * Updated DotNetTools plugin:
     * Added AppDomain column for threads in .NET programs
   * Updated ExtendedServices plugin:
     * Added service protection and SID information
 * FIXED:
   * Fixed a bug in phsvc that caused hangs when automatically elevating actions
   * Fixed hang when viewing handle security for certain File objects
   * Fixed lack of information on startup when using slower refresh intervals
   * Fixed Read/Write Address crash
   * Fixed service non-polling mode on Windows 8 and above
   * Fixed file dialog crash in Windows PE environments
   * Fixed string scanning false positive case

2.35
 * NEW/IMPROVED:
   * Added Load Time and Load Reason columns for modules (Windows 8 and above)
   * Added handle names for Job and Section objects
   * Added Read/Write Memory for Section objects (in process Handles tab)
   * Added CF Guard (Control Flow Guard) column for processes and modules
   * Added highlighting for AppContainer DLLs
   * Added AppContainer and CF Guard image characteristics to peview
   * Added Open Key and Open File Location menu items for services
   * Set priority and I/O priority for multiple processes at once
   * Support for up to 64 processors when setting process/thread affinity
   * Updated ExtendedTools plugin:
     * Added Disk and Network graphs for all processes
   * Updated UserNotes plugin:
     * Added ability to save I/O priority
 * FIXED:
   * Fixed memory editor copy bug

2.34
 * NEW/IMPROVED:
   * Proper Unicode support
   * CPU and GPU graphs are displayed in a grid now (thanks pavel_kv!)
   * Start Task Manager now elevates when necessary