@@ -36,6 +36,9 @@
     <ClCompile Include="treeext.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="svcext.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="dn.h">
@@ -48,6 +51,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="clrsup.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="svcext.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
