@@ -13,6 +13,7 @@ Process Hacker
    * Added handle names for unnamed File objects
    * Added warning for users who attempt to start the 32-bit version on 64-bit Windows
    * Updated DotNetTools plugin:
+     * Added stack trace support for 32-bit processes on 64-bit Windows
      * Added AppDomain column for threads in .NET programs
    * Updated ExtendedServices plugin:
      * Added service protection and SID information
